[package]
name = "pmd_code_table"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"
description = "A library that can read code_table.bin files, used in 3ds pokemon mystery dungeon games for text placeholder encoding"
repository = "https://github.com/marius851000/pmd_code_table"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binread = "2.1.1"
pmd_sir0 = "1.2.1"
thiserror = "1.0.26"